# drawterm

./: meson.build
exportfs/: meson.build
gui-x11/: meson.build
kern/: meson.build
libauth/: meson.build
libauthsrv/: meson.build
libc/: meson.build
libdraw/: meson.build
libip/: meson.build
libmemdraw/: meson.build
libmemlayer/: meson.build
libmp/: meson.build
libsec/: meson.build
