authsrv_src = '''
  _asgetticket.c
  _asrdresp.c
  convA2M.c
  convM2A.c
  convM2PR.c
  convM2T.c
  convM2TR.c
  convPR2M.c
  convT2M.c
  convTR2M.c
  nvcsum.c
  passtokey.c
  readcons.c
  _asgetpakkey.c
  _asgetresp.c
  _asrequest.c
  authpak.c
  form1.c
'''.split()

authsrv_lib = static_library('authsrv', authsrv_src, include_directories: includes)
