c_src = '''
  atexit.c
  charstod.c
  cleanname.c
  convD2M.c
  convM2D.c
  convM2S.c
  convS2M.c
  ctime.c
  crypt.c
  dial.c
  dirfstat.c
  dirfwstat.c
  dirmodefmt.c
  dirstat.c
  dirwstat.c
  dofmt.c
  dorfmt.c
  encodefmt.c
  fcallfmt.c
  fltfmt.c
  fmt.c
  fmtfd.c
  fmtfdflush.c
  fmtlock.c
  fmtprint.c
  fmtquote.c
  fmtrune.c
  fmtstr.c
  fmtvprint.c
  fprint.c
  getenv.c
  getfields.c
  lock.c
  mallocz.c
  nan64.c
  netmkaddr.c
  nsec.c
  pow10.c
  pushssl.c
  pushtls.c
  read9pmsg.c
  readn.c
  rune.c
  runefmtstr.c
  runeseprint.c
  runesmprint.c
  runesnprint.c
  runesprint.c
  runestrchr.c
  runestrlen.c
  runestrstr.c
  runetype.c
  runevseprint.c
  runevsmprint.c
  runevsnprint.c
  seprint.c
  smprint.c
  snprint.c
  sprint.c
  strecpy.c
  strtod.c
  strtoll.c
  sysfatal.c
  time.c
  tokenize.c
  truerand.c
  u16.c
  u32.c
  u64.c
  utfecpy.c
  utflen.c
  utfnlen.c
  utfrrune.c
  utfrune.c
  utfutf.c
  vfprint.c
  vseprint.c
  vsmprint.c
  vsnprint.c
'''.split()

c_lib = static_library('c', c_src, include_directories: includes)

