memdraw_src = '''
  alloc.c
  arc.c
  cload.c
  cmap.c
  cread.c
  defont.c
  draw.c
  ellipse.c
  fillpoly.c
  hwdraw.c
  line.c
  load.c
  openmemsubfont.c
  poly.c
  read.c
  string.c
  subfont.c
  unload.c
  write.c
'''.split()

memdraw_lib = static_library('memdraw', memdraw_src, include_directories: includes)

