mp_src = '''
  betomp.c
  cnfield.c
  crt.c
  gmfield.c
  letomp.c
  mpadd.c
  mpaux.c
  mpcmp.c
  mpdigdiv.c
  mpdiv.c
  mpexp.c
  mpextendedgcd.c
  mpfactorial.c
  mpfield.c
  mpfmt.c
  mpinvert.c
  mpleft.c
  mplogic.c
  mpmod.c
  mpmodop.c
  mpmul.c
  mpnrand.c
  mprand.c
  mpright.c
  mpsel.c
  mpsub.c
  mptobe.c
  mptober.c
  mptoi.c
  mptole.c
  mptolel.c
  mptoui.c
  mptouv.c
  mptov.c
  mpvecadd.c
  mpveccmp.c
  mpvecdigmuladd.c
  mpvecsub.c
  mpvectscmp.c
  strtomp.c
'''.split()

mp_lib = static_library('mp', mp_src, include_directories: includes)

